--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -6,26 +6,43 @@
   <app-card [card]="card | converter"></app-card>
 </div> -->
 
+<div class="container">
+  <div
+    cdkDropList
+    cdkDropListOrientation="horizontal"
+    class="example-list"
+    [cdkDropListData]="aiCards"
+    (cdkDropListDropped)="drop2($event)"
+    [cdkDropListConnectedTo]="discardList"
+    #aiCardList="cdkDropList"
+  >
+    <div class="example-box" *ngFor="let card of aiCards" cdkDrag>
+      <app-card [card]="card | converter"></app-card>
+    </div>
+  </div>
+</div>
+
 <div>
   <div
     cdkDropList
     [cdkDropListData]="buyDeck"
     (cdkDropListDropped)="drop3($event)"
     #buyList="cdkDropList"
-    [cdkDropListConnectedTo]="myCardList"
+    [cdkDropListConnectedTo]="[myCardList, aiCardList]"
     class="mat-h1 buy-deck"
   >
     <div class="example-box buy-deck" cdkDrag>
       <span matBadge="{{buyDeck.length}}">🂠</span>
     </div>
   </div>
+
   <div
     cdkDropList
     class="example-list"
     [cdkDropListData]="discardDeck"
-    (cdkDropListDropped)="drop2($event)"
+    (cdkDropListDropped)="drop2($event, true)"
     #discardList="cdkDropList"
-    [cdkDropListConnectedTo]="myCardList"
+    [cdkDropListConnectedTo]="[myCardList, aiCardList]"
   >
     <div class="example-box" *ngIf="discardDeck.length > 0;else elseBlock" cdkDrag>
       <app-card
@@ -37,17 +54,13 @@
   </div>
 </div>
 
-<button (click)="shuffleDeck(buyDeck)">Shuffle</button>
-
-<button (click)="buy()">Buy</button>
-
 <div class="container">
   <div
     cdkDropList
     cdkDropListOrientation="horizontal"
     class="example-list"
     [cdkDropListData]="myCards"
-    (cdkDropListDropped)="drop3($event)"
+    (cdkDropListDropped)="drop2($event)"
     [cdkDropListConnectedTo]="discardList"
     #myCardList="cdkDropList"
   >
@@ -57,44 +70,10 @@
   </div>
 </div>
 
-<!--
-<div class="container">
-  <h2>To do</h2>
 
-  <div
-    cdkDropList
-    #todoList="cdkDropList"
-    [cdkDropListData]="todo"
-    [cdkDropListConnectedTo]="doneList"
-    class="list"
-    (cdkDropListDropped)="drop($event)"
-  >
-    <div class="list-item" *ngFor="let item of todo" cdkDrag>{{ item }}</div>
-  </div>
-</div>
 
-<div class="container">
-  <h2>Done</h2>
+<button (click)="shuffleDeck(buyDeck)">Shuffle</button>
 
-  <div
-    cdkDropList
-    #doneList="cdkDropList"
-    [cdkDropListData]="done"
-    [cdkDropListConnectedTo]="todoList"
-    class="example-list"
-    (cdkDropListDropped)="drop($event)"
-  >
-    <div class="example-box" *ngFor="let item of done" cdkDrag>{{ item }}</div>
-  </div>
-</div>
+<button (click)="buy()">Buy</button>
 
-<div
-  cdkDropList
-  cdkDropListOrientation="horizontal"
-  class="example-list"
-  (cdkDropListDropped)="drop2($event)"
->
-  <div class="example-box" *ngFor="let timePeriod of todo" cdkDrag>
-    {{ timePeriod }}
-  </div>
-</div> -->
+<!-- <button (click)="finishTurn()">Finish Turn</button> -->
